<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b2">

    <View
        android:id="@+id/v_status_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/b1" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:src="@mipmap/login_beijing"></ImageView>


    <ImageView
        android:id="@+id/v_icon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:src="@mipmap/ic_launcher"></ImageView>

    <TextView
        android:id="@+id/v_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_icon_iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/v_phone_tv"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:layout_below="@+id/v_name_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:background="@drawable/login_b1_radius20"
        android:gravity="center"
        android:paddingBottom="7dp"
        android:paddingLeft="43dp"
        android:paddingRight="43dp"
        android:paddingTop="7dp"
        android:text="@string/login_str6" />


    <Button
        android:id="@+id/v_one_login_btn"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_below="@+id/v_phone_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button"
        android:onClick="onClick"
        android:text="@string/login_str1"
        android:textColor="@color/T5"
        android:textSize="@dimen/sp_15" />

    <LinearLayout
        android:id="@+id/v_ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_one_login_btn"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_icon_iv"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_str2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/v_icon_iv"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_str3" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_ll_1"
        android:layout_marginTop="26dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                style="@style/DividerStyle"
                android:layout_width="98dp"
                android:layout_height="1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_icon_iv"
                android:layout_centerHorizontal="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/login_str4"
                android:textColor="@color/T6"
                android:textSize="@dimen/sp_15" />

            <View
                style="@style/DividerStyle"
                android:layout_width="98dp"
                android:layout_height="1dp" />


        </LinearLayout>

        <ImageView
            android:id="@+id/v_weixin_iv"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            android:src="@mipmap/login_weixin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="46dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_online_select"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/login_select_agreement" />

            <TextView
                android:id="@+id/v_tips_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/v_icon_iv"
                android:paddingLeft="3dp"
                android:textColor="@color/T6"
                android:textSize="@dimen/sp_12" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
